2006-05-26  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
	(print.igraph.es) : added

	* interfaces/R/igraph/R/iterators.R ([.igraph.vs, [.igraph.es) :
	indexing based on attributes a'le GUESS
	* interfaces/R/igraph/R/iterators.R (%--%, %->%, %<-%) : added

2006-05-25  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/foreign.R (write.graph.ncol, write.graph.lgl) :
	updated to new vertex and edge sequences
	* interfaces/R/src/rinterface.c (R_igraph_attribute_has_attr)
	(R_igraph_attribute_get_numeric_graph_attr)
	(R_igraph_attribute_get_string_graph_attr)
	(R_igraph_attribute_get_numeric_vertex_attr)
	(R_igraph_attribute_get_string_vertex_attr)
	(R_igraph_attribute_get_numeric_edge_attr)
	(R_igraph_attribute_get_string_edge_attr) : NULL changed to R_NilValue,
	convert attributes to NUMERIC or CHARACTER
	(R_igraph_attributes_gettype) : added

2006-05-20  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (ba.game, recent.degree.game) :
	latter merged into the former
	
	* interfaces/R/igraph/R/measure.dynamics.R (measure.dynamics.id) :
	time.window parameter added
	* interfaces/R/src/rinterface.c (R_igraph_measure_dynamics_idwindow)
	(R_igraph_measure_dynamics_idwindow_st) : added

2006-05-17  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (recent.degree.game) : added
	* interfaces/R/src/rinterface.c (R_igraph_recent_degree_game) : added

2006-05-16  Gabor Csardi  <csardi@kzoo.edu>

	* interfaces/R/igraph/R/games.R (ba.game) : added 'power' argument

	* interfaces/R/src/rinterface.c (R_igraph_nonlinear_barabasi_game) :
	added

	* interfaces/R/igraph/R/measure.dynamics.R
	* interfaces/R/igraph/R/motifs.R
	* interfaces/R/igraph/R/attributes.R
	* interfaces/R/igraph/R/iterators.R
	* interfaces/R/igraph/R/minimum.spanning.tree.R
	* interfaces/R/igraph/R/plot.R
	* interfaces/R/igraph/R/community.R
	* interfaces/R/igraph/R/operators.R
	* interfaces/R/igraph/R/topology.R