@@ -76,7 +76,8 @@ export(subgraph, simplify, degree, degree.distribution, diameter,
        closeness, subcomponent, betweenness, bibcoupling, cocitation,
        shortest.paths, minimum.spanning.tree, edge.betweenness,
        get.shortest.paths, average.path.length, transitivity,
-       get.all.shortest.paths, get.diameter, farthest.nodes)
+       get.all.shortest.paths, get.diameter, farthest.nodes,
+       graph.laplacian)
 
 # plotting
 
