@@ -230,3 +230,27 @@ transitivity <- function(graph, type="undirected") {
   .Call("R_igraph_transitivity", graph, as.numeric(type),
         PACKAGE="igraph")
 }
+
+graph.laplacian <- function(graph, normalized=FALSE) {
+
+  if (!is.igraph(graph)) {
+    stop("Not a graph object")
+  }
+  if (is.directed(graph)) {
+    warning("Laplacian of a directed graph???")
+  }
+
+  M <- get.adjacency(graph)
+  if (!normalized) {
+    M <- structure(ifelse(M>0, -1, 0), dim=dim(M))
+    diag(M) <- degree(graph)
+  } else {
+    deg <- degree(graph)
+    deg <- outer(deg, deg, "*")
+    M <- structure(ifelse(M>0, -1/deg, 0))
+    diag(M) <- 1
+  }
+  
+  M
+}
+  
