@@ -1,3 +1,8 @@
+2006-05-27  Gabor Csardi  <csardi@kzoo.edu>
+
+	* interfaces/R/igraph/R/structural.properties.R (graph.laplacian) :
+	added
+
 2006-05-26  Gabor Csardi  <csardi@kzoo.edu>
 
 	* interfaces/R/igraph/R/iterators.R (print.igraph.vs)
